--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <section class="banner"></section>
   <nav class="wrap">
     <ul class="nav">
-      <li><button class="btn btn-front" href="#" id="btnFiltrarLivrosFront" value="front-end">LIVROS DE
+      <li><button class="btn btn-front" href="#" id="btnFiltrarLivrosFront" value="front-end" data-filtro="front-end">LIVROS DE
           FRONT-END</button>
       </li>
-      <li><button class="btn btn-back" href="#" id="btnFiltrarLivrosBack" value="back-end">LIVROS DE BACK-END</button>
+      <li><button class="btn btn-back" href="#" id="btnFiltrarLivrosBack" value="back-end" data-filtro="back-end">LIVROS DE BACK-END</button>
       </li>
-      <li><button class="btn btn-dados" href="#" id="btnFiltrarLivrosDados" value="dados">LIVROS DE DADOS</button></li>
-      <li><button class="btn btn-disponiveis" href="#" id="btnLivrosDisponiveis">LIVROS DISPONÍVEIS</button></li>
-      <li><button class="btn btn-ordenacao" href="#" id="btnOrdenarPorPreco">ORDENAR POR PREÇO</button></li>
+      <li><button class="btn btn-dados" href="#" id="btnFiltrarLivrosDados" value="dados" data-filtro="dados">LIVROS DE DADOS</button></li>
+      <li><button class="btn btn-disponiveis" href="#" id="btnLivrosDisponiveis" data-filtro="disponivel">LIVROS DISPONÍVEIS</button></li>
+      <li><button class="btn btn-ordenacao" href="#" id="btnOrdenarPorPreco" data-ordenacao>ORDENAR POR PREÇO</button></li>
     </ul>
   </nav>
   <section class="livros wrap" id="livros" data-livros>
@@ -264,7 +264,7 @@
     </div> -->
 
   </section>
-  <section id="valor_total_livros_disponiveis">
+  <section id="valor_total_livros_disponiveis" data-precoTotal>
     <div class="livros__disponiveis">
       <p>Todos os livros disponíveis por R$ <span id="valor">299,00</span></p>
     </div>
@@ -275,6 +275,11 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
 </body>
-  <script type="module" src="app/main.js"></script>
+  <script src="/app/main.js"></script>
+  <script src="/app/metodoForEach.js"></script>
+  <script src="/app/metodoMap.js"></script>
+  <script src="/app/metodoFilter.js"></script>
+  <script src="/app/metodoSort.js"></script>
+  <script src="/app/metodoReduce.js"></script>
 
 </html>
